@@ -35,7 +35,6 @@ import java.net.URL;
 import java.net.URLClassLoader;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
@@ -81,11 +80,11 @@ public class Profiler {
             try {
                 long profilerTotalTime = TimeUnit.MILLISECONDS.convert(System.nanoTime(), TimeUnit.NANOSECONDS) -
                         profilerStartTime;
-                Files.deleteIfExists(Paths.get(Constants.TEMP_JAR_FILE_NAME));
+                Files.deleteIfExists(Path.of(Constants.TEMP_JAR_FILE_NAME));
                 OUT_STREAM.printf("%s[6/6] Generating output...%s%n", Constants.ANSI_CYAN, Constants.ANSI_RESET);
                 JsonParser jsonParser = new JsonParser();
                 HttpServer httpServer = new HttpServer();
-                String cpuFilePath = Paths.get(currentDir, CPU_PRE_JSON).toString();
+                String cpuFilePath = Path.of(currentDir, CPU_PRE_JSON).toString();
                 jsonParser.initializeCPUParser(cpuFilePath);
                 deleteFileIfExists(cpuFilePath);
                 OUT_STREAM.printf("      Execution time: %d seconds %n", profilerTotalTime / 1000);
@@ -104,7 +103,7 @@ public class Profiler {
             return;
         }
         try {
-            Files.delete(Paths.get(filePath));
+            Files.delete(Path.of(filePath));
         } catch (IOException e) {
             throw new ProfilerException("Failed to delete file: " + filePath + "%n", e);
         }
@@ -173,7 +172,7 @@ public class Profiler {
     private void extractProfiler() throws ProfilerException {
         OUT_STREAM.printf("%s[1/6] Initializing...%s%n", Constants.ANSI_CYAN, Constants.ANSI_RESET);
         try {
-            Path profilerRuntimePath = Paths.get("io/ballerina/runtime/profiler/runtime");
+            Path profilerRuntimePath = Path.of("io/ballerina/runtime/profiler/runtime");
             new ProcessBuilder("jar", "xvf", "Profiler.jar", profilerRuntimePath.toString()).start().waitFor();
         } catch (IOException | InterruptedException exception) {
             throw new ProfilerException(exception);
@@ -183,8 +182,8 @@ public class Profiler {
     private void createTempJar() {
         try {
             OUT_STREAM.printf("%s[2/6] Copying executable...%s%n", Constants.ANSI_CYAN, Constants.ANSI_RESET);
-            Path sourcePath = Paths.get(balJarName);
-            Path destinationPath = Paths.get(Constants.TEMP_JAR_FILE_NAME);
+            Path sourcePath = Path.of(balJarName);
+            Path destinationPath = Path.of(Constants.TEMP_JAR_FILE_NAME);
             Files.copy(sourcePath, destinationPath);
         } catch (IOException e) {
             throw new ProfilerException("Error occurred while copying the file: " + balJarName, e);
@@ -241,7 +240,7 @@ public class Profiler {
             for (String instrumentedFilePath : instrumentedPaths) {
                 FileUtils.deleteDirectory(new File(instrumentedFilePath));
             }
-            Path filePath = Paths.get("io/ballerina/runtime/profiler/runtime");
+            Path filePath = Path.of("io/ballerina/runtime/profiler/runtime");
             FileUtils.deleteDirectory(new File(filePath.toString()));
             profilerMethodWrapper.invokeMethods(profilerDebugArg);
         }
@@ -258,7 +257,7 @@ public class Profiler {
     }
 
     private void listAllFiles(final File userDirectory) {
-        String absolutePath = Paths.get(Constants.TEMP_JAR_FILE_NAME).toFile().getAbsolutePath();
+        String absolutePath = Path.of(Constants.TEMP_JAR_FILE_NAME).toFile().getAbsolutePath();
         analyseInstrumentedDirectories(userDirectory, absolutePath.replaceAll(Constants.TEMP_JAR_FILE_NAME, ""));
     }
 
