@@ -45,7 +45,6 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
 
 import static io.ballerina.compiler.internal.syntax.SyntaxUtils.isSTNodePresent;
@@ -66,7 +65,7 @@ import static io.ballerinalang.compiler.parser.test.ParserTestConstants.VALUE_FI
  */
 public final class ParserTestUtils {
 
-    private static final Path RESOURCE_DIRECTORY = Paths.get("src/test/resources/");
+    private static final Path RESOURCE_DIRECTORY = Path.of("src/test/resources/");
 
     /**
      * <b>WARNING</b>: Enabling this flag will update all the assertion files in unit tests.
@@ -632,6 +631,8 @@ public final class ParserTestUtils {
             case "XML_STEP_EXPRESSION" -> SyntaxKind.XML_STEP_EXPRESSION;
             case "XML_NAME_PATTERN_CHAIN" -> SyntaxKind.XML_NAME_PATTERN_CHAIN;
             case "XML_ATOMIC_NAME_PATTERN" -> SyntaxKind.XML_ATOMIC_NAME_PATTERN;
+            case "XML_STEP_INDEXED_EXTEND" -> SyntaxKind.XML_STEP_INDEXED_EXTEND;
+            case "XML_STEP_METHOD_CALL_EXTEND" -> SyntaxKind.XML_STEP_METHOD_CALL_EXTEND;
             case "REQUIRED_EXPRESSION" -> SyntaxKind.REQUIRED_EXPRESSION;
             case "OBJECT_CONSTRUCTOR" -> SyntaxKind.OBJECT_CONSTRUCTOR;
             case "ERROR_CONSTRUCTOR" -> SyntaxKind.ERROR_CONSTRUCTOR;
