@@ -20,7 +20,7 @@ import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 import java.io.IOException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 /**
  * Test the formatting of multiplicative expressions.
@@ -50,6 +50,6 @@ public class MultiplicativeExpressionsTest extends FormatterTest {
 
     @Override
     public String getTestResourceDir() {
-        return Paths.get("expressions", "multiplicative").toString();
+        return Path.of("expressions", "multiplicative").toString();
     }
 }
