@@ -28,7 +28,6 @@ import org.testng.annotations.Test;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.stream.Stream;
 
 import static java.nio.file.StandardCopyOption.REPLACE_EXISTING;
@@ -46,10 +45,10 @@ public class BindgenTestCase extends BaseTest {
     private BMainInstance balClient;
 
     @BeforeClass()
-    public void setUp() throws IOException, BallerinaTestException {
+    public void setUp() throws IOException {
         tempProjectsDir = Files.createTempDirectory("bal-test-integration-bindgen-");
         // copy TestProject to a temp
-        Path testProject = Paths.get("src", "test", "resources", "bindgen")
+        Path testProject = Path.of("src", "test", "resources", "bindgen")
                 .toAbsolutePath();
         copyFolder(testProject, tempProjectsDir);
         balClient = new BMainInstance(balServer);
