@@ -27,7 +27,7 @@ import org.testng.annotations.BeforeClass;
 import org.testng.annotations.Test;
 
 import java.io.IOException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.HashMap;
 
 import static org.ballerinalang.testerina.test.BaseTestCase.balServer;
@@ -44,7 +44,7 @@ public class ModuleExecutionWithInitStartFailuresTest {
     private String projectPath;
 
     @BeforeClass
-    public void setup() throws BallerinaTestException {
+    public void setup() {
         balClient = new BMainInstance(balServer);
         projectPath = projectBasedTestsPath.resolve("module-execution-tests-with-init-start-failures").toString();
     }
@@ -63,7 +63,7 @@ public class ModuleExecutionWithInitStartFailuresTest {
     @AfterMethod
     public void copyExec() {
         try {
-            FileUtils.copyBallerinaExec(Paths.get(projectPath), String.valueOf(System.currentTimeMillis()));
+            FileUtils.copyBallerinaExec(Path.of(projectPath), String.valueOf(System.currentTimeMillis()));
         } catch (IOException e) {
             // ignore exception
         }
